feat: 完善vue报错、xhr、fetch的拦截

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "files": [
     "dist"
   ],
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Magicalwell",
   "license": "ISC",
   "dependencies": {
